# nanohs

./: .ghci  .gitignore  Base.hs  Closure.hs  CodeGen.hs  Containers.hs  Core.hs  DataCon.hs  Dependency.hs  Eval.hs  Inliner.hs  LICENSE  Nano.hs  NanoHaskell.hs  Parser.hs  PrimGHC.hs  PrimOps.hs  README.md  ScopeCheck.hs  Syntax.hs  Types.hs  _main_old.hs  bootstrap.sh  church.nano  main.hs  nanohs.cabal  rts.asm  rts.c  sloc_count.sh  sys_macos.asm  test4.nano
examples/: church.nano  test.nano  test5.nano
slides/: nanohs_slides.tex
topsort/: TopSortSCC.hs
